# Personalproject_labcommandCLI

./: .gitignore  CLAUDE.md  pyproject.toml
lab/: __main__.py  cli.py  utils.py
lab/commands/: disk.py  env.py  gpu.py  model.py  process.py  run.py  setup.py
tests/: test_cli.py  test_gpu.py  test_model.py  test_process.py
