[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lab-cli"
version = "0.1.0"
description = "GPU lab command reference & runner"
requires-python = ">=3.9"
dependencies = ["click>=8.0"]

[project.scripts]
lab = "lab.cli:cli"

[tool.setuptools.packages.find]
include = ["lab*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
